fix: make header drop down to be aligned to the left

--- a/src/site/public/css/app.scss
+++ b/src/site/public/css/app.scss
@@ -34,12 +34,12 @@
 }
 
 .header__drop-down-item__link {
-  padding: 0 !important;
+  padding: 1rem !important;
   margin: 0 !important;
   height: 100%;
   width: 100%;
   display: flex !important;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
